[package]
name = "bls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
select = "0.6"
flate2 = "1.0.19"
bytes = "1.0" # Added the bytes dependency